--- a/assets/css/frame.css
+++ b/assets/css/frame.css
@@ -1,15 +1,13 @@
 /* fonts */
-@font-face {
-	font-family: 'Lato', sans-serif;
-	src: url('https://fonts.googleapis.com/css?family=Lato');
-}
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
+/* styling framed page */
 body {
 	background-color: #eee;
+	font-family: 'Lato', sans-serif;
 	margin: 0;
 	padding: 0;
 }
-
 header,
 main {
 	padding: 0;
@@ -17,45 +15,43 @@ main {
 
 /* form styling */
 form {
+	background: #F7F7F7;
 	margin: 0.5em auto;
 	padding: 1em;
-	background: #F7F7F7;
 }
-
 form input[type="text"],
 form input[type="email"],
 form textarea {
-	outline: none;
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	width: 100%;
 	background: #fff;
-	margin-bottom: 0.2em;
 	border: 1px solid #ccc;
-	padding: 1em;
+	-webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box;
+	        box-sizing: border-box;
 	color: #555;
-	font: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
+	margin-bottom: 0.2em;
+	padding: 1em;
+	width: 100%;
 }
 form input[type="text"]:focus,
 form input[type="email"]:focus,
 form textarea:focus {
-	box-shadow: 0 0 5px #00ADB5;
-	padding: 1em;
 	border: 1px solid #00ADB5;
+	box-shadow: 0 0 5px #00ADB5;
+	outline: none;
+	padding: 1em;
 }
-
 form input[type="submit"],
 form input[type="button"] {
 	background: #00ADB5;
 	border: 0;
-	color: #fff;
-	box-sizing: border-box;
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
+	   -moz-box-sizing: border-box;
+	        box-sizing: border-box;
+	color: #fff;
 	font-size: 1em;
-	padding: 0.5em;
 	min-width: 5em;
+	padding: 0.5em;
 	width: 30%;
 }
 form input[type="submit"]:hover,
@@ -84,4 +80,3 @@ form input[type="button"]:hover {
 	margin-left: 1em;
 	margin-top: 0;
 }
-
