--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,12 @@
 /* fonts */
-@font-face {
-	font-family: 'Lato', sans-serif;
-	src: url('https://fonts.googleapis.com/css?family=Lato');
-}
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
+/* styling parent page */
 body {
 	background-color: #393E46;
 	color: #222831;
 	font-family: 'Lato', sans-serif;
-	line-height: 1.8em;
+	line-height: 1.8;
 	margin: 0;
 }
 
@@ -20,28 +18,25 @@ h1, h2, h3, h4, h5, h6,
 
 nav ul {
 	list-style: none;
-	text-align: center;
-	padding: 0;
 	margin: 0;
+	padding: 0;
+	text-align: center;
 }
 nav li {
-	font-size: 1.2em;
-	line-height: 2.5em;
-	height: 2.5em;
 	border-bottom: 1px solid #eee;
+	font-size: 1.2em;
+	height: 2.5em;
+	line-height: 2.5;
 }
-
 nav a {
-	text-decoration: none;
 	color: #eee;
 	display: block;
+	text-decoration: none;
 	transition: .3s background-color;
 }
-
 nav a:hover {
 	background-color: #00ADB5;
 }
-
 nav a.active {
 	background-color: #eee;
 	color: #222831;
@@ -50,11 +45,9 @@ nav a.active {
 
 @media screen and (min-width: 600px) {
 	nav li {
-		width: 120px;
 		border-bottom: none;
+		width: 120px;
 	}
-
-	/* Option 1 - Display Inline */
 	nav li {
 		display: inline-block;
 		margin-right: -4px;
@@ -66,7 +59,6 @@ main {
 	background-color: #eee;
 	padding: 0.5em;
 }
-
 main {
 	min-height: 75vh;
 }
@@ -80,7 +72,7 @@ blockquote {
 
 iframe {
 	border: 0;
-	min-height: 5em;
+	min-height: 40em;
 	width: 100%;
 }
 
